--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -8,7 +8,7 @@
 [core]
   excludesfile = /Users/albin/.gitignore-global
   editor = vim
-	pager = diff-so-fancy | less --tabs=4 -RFX
+  pager = diff-so-fancy | less --tabs=4 -RFX
 [color]
   branch = auto
   diff = auto
@@ -16,6 +16,10 @@
   status = auto
 [alias]
   rmm = ! git branch --merged | grep -v \"\\*\" | grep -v master | xargs -r -n 1 git branch -d
+  lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%
+C(reset)%C(bold yellow)%d%C(reset)' --all
+  up = !git fetch --prune && git pull
+  st = !git config --global commit.gpgsign false && git stash -k -u && git config --global commit.gpgsign true
 [commit]
   gpgsign = true
 [gpg]
@@ -23,7 +27,7 @@
 [credential]
   helper = osxkeychain
 [color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
+  oldNormal = red bold
+  oldHighlight = red bold 52
+  newNormal = green bold
+  newHighlight = green bold 22
