--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -15,9 +15,8 @@
   interactive = auto
   status = auto
 [alias]
-  rmm = ! git branch --merged | grep -v \"\\*\" | grep -v master | xargs -r -n 1 git branch -d
-  lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%
-C(reset)%C(bold yellow)%d%C(reset)' --all
+  rmm = ! git branch --merged | grep -v \"\\*\" | grep -v master | xargs -n 1 git branch -d
+  lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
   up = !git fetch --prune && git pull
   st = !git config --global commit.gpgsign false && git stash -k -u && git config --global commit.gpgsign true
 [commit]
