--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -17,8 +17,11 @@
 [alias]
   rmm = ! git branch --merged | grep -v \"\\*\" | grep -v master | xargs -n 1 git branch -d
   lg = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
-  up = !git fetch --prune && git pull
+  up = pull --prune
   st = !git config --global commit.gpgsign false && git stash -k -u && git config --global commit.gpgsign true
+  fresh = !git checkout master && git up && git rmm
+  alias = config --get-regexp ^alias\.
+  up-master = !export branch_name=$(git symbolic-ref -q HEAD | sed 's/^refs\/heads\///' | sed 's/^$/HEAD/') && git checkout master && git up && git checkout "$branch_name"
 [commit]
   gpgsign = true
 [gpg]
