--- a/tasks/git.yml
+++ b/tasks/git.yml
@@ -3,8 +3,10 @@
   copy:
     src: files/.gitconfig
     dest: '{{ ansible_env.HOME }}/.gitconfig'
+  tags: git
 
 - name: Copy global gitignore
   copy:
     src: files/.gitignore-global
     dest: '{{ ansible_env.HOME }}/.gitignore-global'
+  tags: git
