--- a/tasks/homebrew-casks.yml
+++ b/tasks/homebrew-casks.yml
@@ -4,6 +4,7 @@
     tap: caskroom/cask
   tags:
     - packages
+    - cask
 
 - name: Install casks (browsers)
   homebrew_cask:
@@ -13,6 +14,7 @@
     - firefox
   tags:
     - packages
+    - cask
 
 - name: Install casks (entertainment)
   homebrew_cask:
@@ -22,6 +24,7 @@
     - vlc
   tags:
     - packages
+    - cask
 
 - name: Install casks (communication)
   homebrew_cask:
@@ -39,6 +42,7 @@
     - 1password
   tags:
     - packages
+    - cask
 
 - name: Install casks (devtools)
   homebrew_cask:
@@ -49,6 +53,7 @@
     - virtualbox
   tags:
     - packages
+    - cask
 
 - name: Install casks (IDEs / editors)
   homebrew_cask:
@@ -61,6 +66,7 @@
     - clion
   tags:
     - packages
+    - cask
 
 - name: Install casks (other)
   homebrew_cask:
@@ -73,3 +79,4 @@
     - dropbox
   tags:
     - packages
+    - cask
